home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: home-assistant

spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config/
            - name: dbus
              mountPath: /run/dbus/
              readOnly: true
      imagePullSecrets:
        - name: docker-registry-dockerconfigjson
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - name: dbus
          hostPath:
            path: /tmp/dbus/ # FIXME
            type: Directory
      nodeName: orange # FIXME
