home-assistant/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: home-assistant

spec:
  ports:
    - name: web
      port: 8123
